--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
-        
-
+        classpath 'com.android.tools.build:gradle:2.2.0'
     }
 }
 
 allprojects {
-    apply plugin: "eclipse"
     apply plugin: "idea"
 
     version = '1.0'
@@ -23,9 +20,7 @@ allprojects {
         appName = "SuperCubito"
         gdxVersion = '1.9.6'
         roboVMVersion = '2.3.1'
-        box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
-        aiVersion = '1.8.0'
     }
 
     repositories {
@@ -75,8 +70,4 @@ project(":core") {
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
         
     }
-}
-
-tasks.eclipse.doLast {
-    delete ".project"
 }
