--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 android {
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
     compileSdkVersion 25
     sourceSets {
         main {
@@ -82,4 +82,13 @@ idea {
             }
         }
     }
+}
+apply plugin: 'kotlin-android'
+repositories {
+    mavenCentral()
+}
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.jakewharton.timber:timber:4.5.1'
+    //compile 'com.google.android.gms:play-services-ads:11.0.4'
 }
