--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 android {
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.2'
     compileSdkVersion 25
     sourceSets {
         main {
@@ -90,5 +90,5 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.jakewharton.timber:timber:4.5.1'
-    //compile 'com.google.android.gms:play-services-ads:11.0.4'
+    compile 'com.google.android.gms:play-services-ads:11.0.4'
 }
