--- a/android/build.gradle
+++ b/android/build.gradle
@@ -98,4 +98,5 @@ dependencies {
 
     compile 'com.facebook.android:audience-network-sdk:4.26.0'
     compile 'com.google.android.exoplayer:exoplayer:r1.4.1'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
