--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,3 +4,6 @@ sourceCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
+dependencies {
+    compile 'junit:junit:4.12'
+}
