--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,3 +5,6 @@ sourceCompatibility = 1.7
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
+dependencies {
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:1.1.51'
+}
