--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,12 @@
 android {
     buildToolsVersion '25.0.2'
-    compileSdkVersion 25
+    compileSdkVersion 26
+
+    defaultConfig {
+        minSdkVersion 21
+        targetSdkVersion 26
+        multiDexEnabled true
+    }
 
     sourceSets {
         main {
